- improve state of API definition

--- a/src/main/resources/swagger.api/marc-migrations.yaml
+++ b/src/main/resources/swagger.api/marc-migrations.yaml
@@ -2,12 +2,23 @@ openapi: 3.0.0
 info:
   version: 1.0.0
   title: MARC migrations API
-  description: Manage MARC migrations
+  description: |
+    API for managing MARC record migrations in FOLIO.
+
+    This API allows users to:
+    - Create new migration operations for MARC records
+    - Monitor the progress of migrations
+    - Retrieve information about existing migration operations
+
+    The API supports migration operations for different entity types (authority, instance) 
+    and operation types (remapping).
+
 
 paths:
   /marc-migrations:
     get:
       summary: Get MARC migration operations
+      description: Retrieves a collection of MARC migration operations with pagination and filtering options.
       operationId: getMarcMigrations
       tags:
         - marc-migrations
@@ -33,12 +44,13 @@ paths:
         - name: entityType
           in: query
           required: false
-          description: Migration Entity Type to filter by
+          description: Migration Entity Type to filter by.
           schema:
             $ref: "#/components/schemas/EntityType"
+        - $ref: '#/components/parameters/TenantId'
       responses:
         '200':
-          description: Retrieved MARC migration operations collection
+          description: Retrieved MARC migration operations collection.
           content:
             application/json:
               schema:
@@ -59,7 +71,7 @@ paths:
                     totalNumOfRecords: 50000
                 totalRecords: 2
         '400':
-          description: Bad request
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -73,7 +85,7 @@ paths:
                       - key: 'entityType'
                         value: 'unexpected_entity_name'
         '500':
-          description: Unexpected error
+          description: Unexpected error.
           content:
             application/json:
               schema:
@@ -85,12 +97,14 @@ paths:
                     type: 'NullPointerException'
     post:
       summary: Register new MARC migration operation
+      description: Creates a new MARC migration operation for the specified entity type and operation type.
       operationId: createMarcMigrations
       tags:
         - marc-migrations
       parameters:
         - $ref: '#/components/parameters/TenantId'
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -102,7 +116,7 @@ paths:
                   operationType: remapping
       responses:
         '201':
-          description: New MARC migration operation successfully registered
+          description: New MARC migration operation successfully registered.
           content:
             application/json:
               schema:
@@ -116,8 +130,14 @@ paths:
                     operationType: remapping
                     status: new
                     totalNumOfRecords: 10000
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '422':
-          description: Unexpected request body
+          description: Unprocessable entity - validation error in request body.
           content:
             application/json:
               schema:
@@ -131,7 +151,7 @@ paths:
                       - key: 'entityType'
                         value: 'holdings'
         '500':
-          description: Unexpected error
+          description: Internal server error.
           content:
             application/json:
               schema:
@@ -144,6 +164,7 @@ paths:
   /marc-migrations/{operationId}:
     get:
       summary: Get MARC migration operation by ID
+      description: Retrieves a specific MARC migration operation by its unique identifier.
       operationId: getMarcMigrationById
       tags:
         - marc-migrations
@@ -159,13 +180,22 @@ paths:
         - $ref: '#/components/parameters/TenantId'
       responses:
         '200':
-          description: Retrieved MARC migration operation
+          description: Retrieved MARC migration operation.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/MigrationOperation'
+              example:
+                id: 474d0af6-028f-4d15-8354-d2fc10c71a68
+                userId: 0db8f753-6864-452c-9b49-5362a20188b5
+                entityType: authority
+                operationType: remapping
+                status: data_mapping
+                totalNumOfRecords: 10000
+                mappedNumOfRecords: 5000
+                startTimeMapping: "2023-01-15T10:30:00.000Z"
         '400':
-          description: Bad request
+          description: Bad request - Invalid input parameters.
           content:
             application/json:
               schema:
@@ -176,21 +206,21 @@ paths:
                     message: 'Invalid UUID format'
                     type: 'IllegalArgumentException'
                     parameters:
-                      - key: 'entityType'
-                        value: 'holdings'
+                      - key: 'operationId'
+                        value: 'invalid-uuid-format'
         '404':
-          description: MARC migration operation was not found
+          description: MARC migration operation was not found.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
               examples:
-                InvalidUUIDFormat:
+                OperationNotFound:
                   value:
                     message: 'MARC migration operation was not found [id: 474d0af6-028f-4d15-8354-d2fc10c71a68]'
                     type: 'NotFoundException'
         '500':
-          description: Unexpected error
+          description: Internal server error.
           content:
             application/json:
               schema:
@@ -201,19 +231,21 @@ paths:
                     message: 'Unexpected error'
                     type: 'NullPointerException'
     put:
-      summary: Save MARC migration operation
+      summary: Initialize MARC migration operation save stage
+      description: Save results of the MARC migration operation.
       operationId: saveMarcMigration
       tags:
         - marc-migrations
       parameters:
         - in: path
           name: operationId
-          description: The UUID of a MARC migration operation
+          description: The UUID of a MARC migration operation.
           required: true
           schema:
             type: string
             format: uuid
           example: 474d0af6-028f-4d15-8354-d2fc10c71a68
+        - $ref: '#/components/parameters/TenantId'
       requestBody:
         content:
           application/json:
@@ -222,13 +254,14 @@ paths:
             examples:
               ValidBody:
                 value:
-                  status: data_mapping, data_saving
+                  status: data_mapping
+                  publishEvents: true
         required: true
       responses:
         '204':
-          description: Saved MARC migration operation
-        '404':
-          description: MARC migration operation was not found
+          description: MARC migration operation successfully updated.
+        '400':
+          description: Bad request - Invalid input parameters.
           content:
             application/json:
               schema:
@@ -236,10 +269,40 @@ paths:
               examples:
                 InvalidUUIDFormat:
                   value:
+                    message: 'Invalid UUID format'
+                    type: 'IllegalArgumentException'
+                    parameters:
+                      - key: 'operationId'
+                        value: 'invalid-uuid-format'
+        '404':
+          description: MARC migration operation was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                OperationNotFound:
+                  value:
                     message: 'MARC migration operation was not found [id: 474d0af6-028f-4d15-8354-d2fc10c71a68]'
                     type: 'NotFoundException'
+        '422':
+          description: Unprocessable entity - validation error in request body.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                InvalidStatus:
+                  value:
+                    message: 'Invalid status transition'
+                    type: 'IllegalStateException'
+                    parameters:
+                      - key: 'status'
+                        value: 'data_saving'
+                      - key: 'currentStatus'
+                        value: 'new'
         '500':
-          description: Unexpected error
+          description: Internal server error.
           content:
             application/json:
               schema:
@@ -253,6 +316,7 @@ paths:
 components:
   schemas:
     NewMigrationOperation:
+      description: Request body schema for creating a new MARC migration operation.
       type: object
       required:
         - entityType
@@ -264,13 +328,15 @@ components:
           $ref: '#/components/schemas/OperationType'
 
     MigrationOperationCollection:
+      description: Collection of MARC migration operations with pagination information.
       type: object
       properties:
         totalRecords:
-          description: Total number of records
+          description: Total number of migration operations matching the query.
           type: integer
+          minimum: 0
         migrationOperations:
-          description: List of MARC migration operations
+          description: List of MARC migration operations for the current page.
           type: array
           items:
             $ref: '#/components/schemas/MigrationOperation'
@@ -279,14 +345,21 @@ components:
         - migrationOperations
 
     MigrationOperation:
+      description: Represents a MARC migration operation with its current state and progress information.
       type: object
+      required:
+        - id
+        - userId
+        - entityType
+        - operationType
+        - status
       properties:
         id:
-          description: ID of migration operation
+          description: Unique identifier of the migration operation.
           type: string
           format: uuid
         userId:
-          description: ID of user that created the migration operation
+          description: Identifier of the user who created the migration operation.
           type: string
           format: uuid
         entityType:
@@ -296,32 +369,36 @@ components:
         status:
           $ref: '#/components/schemas/MigrationOperationStatus'
         totalNumOfRecords:
-          description: Total number of records that will be migrated
+          description: Total number of records that will be migrated in this operation.
           type: integer
+          minimum: 0
         mappedNumOfRecords:
-          description: Total number of mapped records
+          description: Number of records that have been successfully mapped so far.
           type: integer
+          minimum: 0
         savedNumOfRecords:
-          description: Total number of saved records
+          description: Number of records that have been successfully saved so far.
           type: integer
+          minimum: 0
         startTimeMapping:
-          description: Start time of mapping step of migration
+          description: Timestamp when the mapping phase of the migration started.
           type: string
           format: date-time
         endTimeMapping:
-          description: End time of mapping step of migration
+          description: Timestamp when the mapping phase of the migration completed.
           type: string
           format: date-time
         startTimeSaving:
-          description: Start time of saving step of migration
+          description: Timestamp when the saving phase of the migration started.
           type: string
           format: date-time
         endTimeSaving:
-          description: End time of saving step of migration
+          description: Timestamp when the saving phase of the migration completed.
           type: string
           format: date-time
 
     SaveMigrationOperation:
+      description: Request body schema for updating an existing MARC migration operation.
       type: object
       required:
         - status
@@ -329,26 +406,28 @@ components:
         status:
           $ref: '#/components/schemas/MigrationOperationStatus'
         publishEvents:
-          description: A flag that indicates if domain events should be published
+          description: A flag that indicates if domain events should be published when the operation is updated.
           type: boolean
           default: true
 
     EntityType:
-      description: Type of entity for migration
+      description: Type of MARC entity being migrated.
       type: string
       enum:
         - authority
         - instance
+      example: authority
 
     OperationType:
-      description: Type of migration
+      description: Type of migration operation to perform.
       type: string
       enum:
         - remapping
         - import
+      example: remapping
 
     MigrationOperationStatus:
-      description: Migration status
+      description: Current status of the migration operation.
       type: string
       enum:
         - new
@@ -358,36 +437,46 @@ components:
         - data_saving
         - data_saving_completed
         - data_saving_failed
+      example: data_mapping
 
     Error:
-      description: Error object
+      description: Standard error response object.
       type: object
+      required:
+        - message
       properties:
         message:
-          description: Error message
+          description: Human-readable error message.
           type: string
+          example: "Invalid UUID format"
         type:
-          description: Error type
+          description: Type of the exception that caused the error.
           type: string
+          example: "IllegalArgumentException"
         code:
-          description: Error code
+          description: Error code for client-side error handling.
           type: string
+          example: "validation_error"
         parameters:
-          description: Error parameters
+          description: Additional parameters providing context for the error.
           type: array
           items:
             $ref: '#/components/schemas/ErrorParameter'
 
     ErrorParameter:
-      description: Error parameter object
+      description: Key-value pair providing additional context for an error.
       type: object
+      required:
+        - key
       properties:
         key:
-          description: Parameter key
+          description: Name of the parameter that caused or is related to the error.
           type: string
+          example: "operationId"
         value:
-          description: Parameter value
+          description: Value of the parameter that caused or is related to the error.
           type: string
+          example: "invalid-uuid-format"
 
   parameters:
     TenantId:
