--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -27,12 +27,7 @@ env:
   API_WARNINGS: false
 
 on:
-  push:
-    paths:
-      - 'src/main/resources/swagger.api/**'
-  pull_request:
-    paths:
-      - 'src/main/resources/swagger.api/**'
+  workflow_dispatch:
 
 jobs:
   api-lint:
