--- a/.github/workflows/api-schema-lint.yml
+++ b/.github/workflows/api-schema-lint.yml
@@ -17,12 +17,7 @@ env:
   API_EXCLUDES: ''
 
 on:
-  push:
-    paths:
-      - 'src/main/resources/swagger.api/**'
-  pull_request:
-    paths:
-      - 'src/main/resources/swagger.api/**'
+  workflow_dispatch:
 
 jobs:
   api-schema-lint:
