--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <aws-sdk-java.version>2.31.30</aws-sdk-java.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
+    <vertx.version>4.5.14</vertx.version>
 
     <checkstyle.version>10.23.0</checkstyle.version>
     <maven-openapi-generator-plugin.version>7.12.0</maven-openapi-generator-plugin.version>
@@ -116,6 +117,12 @@
           <artifactId>logback-classic</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <version>${vertx.version}</version>
     </dependency>
 
     <!-- Test dependencies -->
