--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
     <vertx.version>4.5.14</vertx.version>
+    <marc4j.version>2.9.6</marc4j.version>
+    <commons.lang.version>2.6</commons.lang.version>
 
     <checkstyle.version>10.23.0</checkstyle.version>
     <maven-openapi-generator-plugin.version>7.12.0</maven-openapi-generator-plugin.version>
@@ -123,6 +125,18 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
       <version>${vertx.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.marc4j</groupId>
+      <artifactId>marc4j</artifactId>
+      <version>${marc4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>${commons.lang.version}</version>
     </dependency>
 
     <!-- Test dependencies -->
