feat(s3-env-variables) Re-work all s3 related envs var and standardization

--- a/docker/.env
+++ b/docker/.env
@@ -17,6 +17,7 @@ S3_REGION=eu-west-1
 S3_ACCESS_KEY_ID=access
 S3_SECRET_ACCESS_KEY=secret12
 S3_URL=http://minio-marc-migrations:9000/
+S3_BUCKET=marc-migrations
 RECORDS_CHUNK_SIZE=10
 CHUNK_FETCH_IDS_COUNT=20
 CHUNK_PERSIST_COUNT=50
