--- a/src/main/resources/swagger.api/marc-migrations.yaml
+++ b/src/main/resources/swagger.api/marc-migrations.yaml
@@ -661,6 +661,7 @@ components:
             - not_started
             - in_progress
             - completed
+            - error
 
     MigrationOperationCollection:
       description: Collection of MARC migration operations with pagination information.
