fix(error-handling) fix commit, partially add add-cascade-deletes.xml

--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,7 @@
                 <dateLibrary>java8</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
                 <useSpringBoot3>true</useSpringBoot3>
+                <useEnumCaseInsensitive>true</useEnumCaseInsensitive>
               </configOptions>
             </configuration>
           </execution>
