--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -78,8 +78,8 @@ folio:
     endpoint: ${S3_URL:https://s3.amazonaws.com}
     region: ${S3_REGION:us-west-2}
     bucket: ${S3_BUCKET}
-    accessKey: ${S3_ACCESS_KEY_ID}
-    secretKey: ${S3_SECRET_ACCESS_KEY}
+    accessKey: ${S3_ACCESS_KEY_ID:}
+    secretKey: ${S3_SECRET_ACCESS_KEY:}
     awsSdk: ${S3_IS_AWS:false}
     retryCount: ${S3_RETRY_COUNT:3}
     retryDelayMs: ${S3_RETRY_DELAY_MS:500}
