--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,8 +76,8 @@ folio:
     endpoint: ${S3_URL:http://localhost:9000/}
     region: ${S3_REGION:eu-west-1}
     bucket: ${S3_BUCKET:marc-migrations}
-    accessKey: ${S3_ACCESS_KEY_ID:access}
-    secretKey: ${S3_SECRET_ACCESS_KEY:secret12}
+    accessKey: ${S3_ACCESS_KEY_ID:}
+    secretKey: ${S3_SECRET_ACCESS_KEY:}
     awsSdk: ${S3_IS_AWS:false}
     retryCount: ${S3_RETRY_COUNT:3}
     retryDelayMs: ${S3_RETRY_DELAY_MS:500}
