chore: Improve Docker Compose setup for local development
Implements: MODMARCMIG-83

--- a/docker/.env
+++ b/docker/.env
@@ -1,23 +1,43 @@
+# Docker Compose configuration for mod-marc-migrations
+
+# Project Configuration
 COMPOSE_PROJECT_NAME=folio-mod-marc-migrations
-DEBUG_PORT=5010
-OKAPI_URL=http://api-mock:8080
-APP_PORT=8081
-PGADMIN_DEFAULT_EMAIL=user@domain.com
-PGADMIN_DEFAULT_PASSWORD=admin
-PGADMIN_PORT=5000
+
+# Module Configuration
+ENV=dev
+MODULE_REPLICAS=1
+
+# Database Configuration
 DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=okapi_modules
 DB_USERNAME=folio_admin
 DB_PASSWORD=folio_admin
+
+# pgAdmin Configuration
+PGADMIN_DEFAULT_EMAIL=user@domain.com
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_PORT=5000
+
+# Kafka Configuration
 KAFKA_HOST=kafka
-KAFKA_PORT=9092
-ENV=dev
+KAFKA_PORT=29092
+KAFKA_UI_PORT=8080
+KAFKA_TOPIC_PARTITIONS=2
+
+# MinIO/S3 Configuration
 S3_REGION=eu-west-1
 S3_ACCESS_KEY_ID=access
 S3_SECRET_ACCESS_KEY=secret12
-S3_URL=http://minio-marc-migrations:9000/
+S3_URL=http://minio:9000/
 S3_BUCKET=marc-migrations
+S3_LOCAL_SUB_PATH=mod-marc-migrations
+
+# WireMock Configuration
+WIREMOCK_PORT=9130
+OKAPI_URL=http://api-mock:8080
+
+# Module Performance Configuration
 RECORDS_CHUNK_SIZE=10
 CHUNK_FETCH_IDS_COUNT=20
 CHUNK_PERSIST_COUNT=50
