feat: migrate to Spring Boot 4
Closes: MODMARCMIG-85

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,9 +1,11 @@
 folio:
+  exchange:
+    enabled: true
   logging:
     request:
       enabled: true
       level: full
-    feign:
+    exchange:
       enabled: true
       level: full
   environment: folio
