--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: mod-marc-migrations
-  profiles:
-    default: "dev"
   threads:
     virtual:
       enabled: true
@@ -31,10 +29,6 @@ spring:
     show-sql: false
   liquibase:
     change-log: classpath:db/changelog/changelog-master.xml
-  cloud:
-    openfeign:
-      okhttp:
-        enabled: true
   jackson:
     default-property-inclusion: non_empty
   batch:
@@ -67,13 +61,15 @@ folio:
     password: ${SYSTEM_USER_PASSWORD:mod-marc-migrations}
     lastname: MARC Migrations
     permissionsFilePath: permissions/mod-marc-migrations-permissions.csv
+  exchange:
+    enabled: true
   tenant:
     validation:
       enabled: true
   logging:
     request:
       enabled: true
-    feign:
+    exchange:
       enabled: true
   migration:
     chunk-size: ${RECORDS_CHUNK_SIZE:500}
@@ -109,6 +105,6 @@ server:
 
 logging:
   level:
-    org.folio.spring.filter.LoggingRequestFilter: debug
+    org.folio.spring.filter.IncomingRequestLoggingFilter: debug
     org.folio.marc.migrations: debug
 
