--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,10 +31,6 @@ spring:
     show-sql: false
   liquibase:
     change-log: classpath:db/changelog/changelog-master.xml
-  cloud:
-    openfeign:
-      okhttp:
-        enabled: true
   jackson:
     default-property-inclusion: non_empty
   batch:
@@ -57,13 +53,15 @@ folio:
     password: ${SYSTEM_USER_PASSWORD}
     lastname: MARC Migrations
     permissionsFilePath: permissions/mod-marc-migrations-permissions.csv
+  exchange:
+    enabled: true
   tenant:
     validation:
       enabled: true
   logging:
     request:
       enabled: true
-    feign:
+    exchange:
       enabled: true
   migration:
     chunk-size: ${RECORDS_CHUNK_SIZE:500}
@@ -104,6 +102,5 @@ spring:
       on-profile: dev
 logging:
   level:
-    org.folio.spring.filter.LoggingRequestFilter: debug
+    org.folio.spring.filter.IncomingRequestLoggingFilter: debug
     org.folio.marc.migrations.client.MappingMetadataClient: debug
-    tracer: trace
